# sptc-dist

./: .gitignore  .gitmodules  CLAUDE.md  benchmark_plan.md  dataset_context.md  download_molecules.sh  tiledarray_limitations.md
benchmark/: ANALYSIS.md  ANALYSIS_32NODE.md  CMakeLists.txt  DETAILED_ANALYSIS.md  HOWTO.md  LITERATURE_REVIEW.md  REPORT_EQ1.md  RESULTS.md  SUMMARY.md  benchmark_main.cpp  coo_loader.h  equations.h  hostfile  hostfile_32  log_32node.txt  log_eq1.txt  results_32node.csv  results_all.csv  results_all_32node.csv  results_eq0_c2h6.csv  results_eq1.csv  run_all_benchmarks.sh  run_benchmark.sh  run_eq1_benchmark.sh  run_full_benchmark.sh  run_scaling_study.sh  sparsity_data.md  ta_benchmark_main.cpp  ta_builder.h  ta_equations.h  ta_smoke_test.cpp
